<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_tt_mm_yy">tt/mm/yy</string>
<string name="lbl_personality">Personality</string>
<string name="lbl_edit_photo">Edit Photo</string>
<string name="lbl_last_name2">Last name</string>
<string name="lbl_your_email">Your Email</string>
<string name="lbl_next">Next</string>
<string name="msg_research_produc">Research Product for UI8</string>
<string name="lbl_indonesian">Indonesian</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
<string name="lbl_english">English</string>
<string name="lbl_adalahalcana">AdalahAlcana|</string>
<string name="lbl_adalah">Adalah</string>
<string name="lbl_indonesian2">Indonesian|</string>
<string name="lbl_home">Home</string>
<string name="lbl_date_of_birth">Date of birth</string>
<string name="lbl_first_name">First Name</string>
<string name="msg_already_have_an">Already have an account?</string>
<string name="lbl_signup">SignUp</string>
<string name="lbl_country">Country</string>
<string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla fermentum netus amet risus commodo amet vulputate tellus. Et quis ornare sed diam in. Id nibh mattis quis fermentum non malesuada. Vel ullamcorper lacus, mollis pellentesque egestas aliquet aliquam. Risus lorem velit, nunc id ornare diam. Odio diam egestas vulputate tristique mi aliquam eget. Feugiat mi sed semper faucibus tellus aliquam nulla ullamcorper arcu. Est in risus pulvinar arcu pretium dui eget pretium. Nunc, sed scelerisque id varius.
Vulputate vel aliquam suscipit vitae, nullam pretium. Ut sed elementum eget id pellentesque. Odio placerat faucibus purus rhoncus, pharetra commodo. Augue a duis vitae tempor lobortis. Aliquam nunc amet fermentum, aliquet elementum ac neque, convallis. Fames nulla ornare diam odio enim. Enim, pellentesque</string>
<string name="lbl_first_name2">First name</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_termsandconditi">TermsAndConditions</string>
<string name="lbl_today">Today</string>
<string name="lbl_e_mail">E-mail</string>
<string name="lbl_28_may_2002">28 May 2002|</string>
<string name="msg_when_community">When community comes unity</string>
<string name="lbl_log_out">Log Out</string>
<string name="lbl_setting">Setting</string>
<string name="msg_your_settings_s">Your settings so that we are comfortable</string>
<string name="msg_this_is_your_co">this is your community, help them to grow more</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
<string name="lbl_change_save">Change save</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="msg_welcome_to_our">Welcome to our community</string>
<string name="lbl_work_today">Work Today</string>
<string name="lbl_hobby">Hobby</string>
<string name="lbl_username">UserName</string>
<string name="msg_create_action_p">Create Action Plan</string>
<string name="lbl_attachments">Attachments</string>
<string name="lbl_task_todo">Task todo</string>
<string name="lbl_save">Save</string>
<string name="msg_create_action_m">Create Action Mobile</string>
<string name="lbl_02_april_2021">02 April 2021</string>
<string name="msg_helping_others">Helping others means helping yourself.</string>
<string name="msg_make_your_job_e">Make your job easier with our reminders</string>
<string name="msg_if_you_are_alwa">If you are always helping others you are helping yourself too</string>
<string name="lbl_date">Date</string>
<string name="lbl_email">Email</string>
<string name="lbl_fourta">Fourta|</string>
<string name="lbl_start">Start</string>
<string name="lbl_last_name">Last Name</string>
<string name="msg_joined_6_month">Joined 6 Month Ago</string>
<string name="lbl_maximum_10_mb">maximum 10 mb</string>
<string name="lbl_adacana">Adacana</string>
<string name="lbl_work_today_s2">"Work Today's"</string>
<string name="lbl_login">Login</string>
<string name="lbl_sleep">Sleep|</string>
<string name="lbl_alcanasatre">Alcanasatre</string>
<string name="lbl_forgot_password">Forgot Password</string>
<string name="lbl_login_or_signup">Login or SignUp</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="msg_our_community_i3">"Our community is always there 24 hours if you need it, don't hesitate to join"</string>
<string name="msg_our_community_i2">"Our community is your community too so let's strengthen our community together"</string>
<string name="lbl_password">Password</string>
<string name="lbl_wish_list">Wish List</string>
<string name="lbl_settings">Settings</string>
<string name="msg_our_community_i">our community is ready to help you to join our best platform</string>
<string name="lbl_work_today_s">Work Today\u2019s</string>
<string name="lbl_language">Language</string>
<string name="lbl_get_in_through">Get in through</string>
<string name="msg_make_a_wish_lis">Make a wish list</string>
<string name="msg_terms_and_condi">Terms and Conditions</string>
<string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
</resources>
