<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signupVM" type="com.application.app.modules.signup.data.viewmodel.SignupVM"/>
    </data>
    <LinearLayout android:id="@+id/linearGroup116"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearAppBar"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageBack"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_60pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_width="@dimen/_67pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_back_2"/>
                <TextView android:alpha="0.8"
                    android:gravity="top|start"
                    android:id="@+id/txtSignUp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_165pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:text="@{signupVM.signupModel.txtSignUp}"
                    style="@style/txtPoppinssemibold18" tools:text="@string/lbl_sign_up"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:id="@+id/scrollViewScrollview"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearSignUp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_19pxv" android:paddingTop="@dimen/_21pxv">
                <LinearLayout android:id="@+id/linearTitle"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:alpha="0.8"
                        android:gravity="start"
                        android:id="@+id/txtWhenCommunity"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{signupVM.signupModel.txtWhenCommunity}"
                        style="@style/txtPoppinsbold34" tools:text="@string/msg_when_community"/>
                    <TextView android:alpha="0.4"
                        android:gravity="start"
                        android:id="@+id/txtOurCommunityI"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{signupVM.signupModel.txtOurCommunityI}"
                        style="@style/txtPoppinsregular12_1" tools:text="@string/msg_our_community_i3"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageLogo"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_120pxh"
                    android:layout_marginEnd="@dimen/_132pxh"
                    android:layout_marginStart="@dimen/_127pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="@dimen/_114pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_logo_4"/>
                <EditText
                    android:background="@drawable/rectangle_border_gray_900_19_radius_10"
                    android:hint="@string/lbl_first_name2"
                    android:id="@+id/etFirstName"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_96pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingStart="@dimen/_28pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etFirstNameValue}"
                    android:textColorHint="@color/gray_900" style="@style/etRoundedOutline_1"/>
                <EditText
                    android:background="@drawable/rectangle_border_gray_900_19_radius_10"
                    android:hint="@string/lbl_last_name2"
                    android:id="@+id/etLastName"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etLastNameValue}"
                    android:textColorHint="@color/gray_900" style="@style/etRoundedOutline_1"/>
                <EditText
                    android:background="@drawable/rectangle_border_gray_900_19_radius_10"
                    android:hint="@string/lbl_e_mail"
                    android:id="@+id/etEmail"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etEmailValue}"
                    android:textColorHint="@color/gray_900" style="@style/etRoundedOutline_1"/>
                <EditText
                    android:background="@drawable/rectangle_border_gray_900_19_radius_10"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etPassword"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etPasswordValue}"
                    android:textColorHint="@color/gray_900" style="@style/etRoundedOutline_1"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtLoremIpsumDol"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_23pxv"
                    android:paddingStart="@dimen/_1pxh"
                    android:paddingTop="@dimen/_2pxv"
                    android:text="@{signupVM.signupModel.txtLoremIpsumDol}"
                    style="@style/txt" tools:text="@string/msg_lorem_ipsum_dol"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:clickable="true" android:gravity="center"
                    android:id="@+id/btnNext"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:text="@string/lbl_next"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_next"/>
                <LinearLayout android:id="@+id/linearAlreadyhavean"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:alpha="0.4"
                        android:gravity="top|start"
                        android:id="@+id/txtAlreadyHaveAn"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_86pxh"
                        android:layout_weight="0.9"
                        android:layout_width="0dp"
                        android:text="@{signupVM.signupModel.txtAlreadyHaveAn}"
                        style="@style/txtPoppinsmedium12" tools:text="@string/msg_already_have_an"/>
                    <TextView android:gravity="top|start"
                        android:id="@+id/txtLogin"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_85pxh"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:text="@{signupVM.signupModel.txtLogin}"
                        style="@style/txtPoppinssemibold12" tools:text="@string/lbl_login"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
